--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/sortby_popularity"
+    android:orderInCategory="1"
+    android:title="popularity"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/sortby_rating"
+        android:orderInCategory="2"
+        android:title="rating"
+        app:showAsAction="ifRoom" />
 
 </menu>
